--- a/src/sass/components/_text.scss
+++ b/src/sass/components/_text.scss
@@ -23,7 +23,7 @@
   line-height: 2.14;
   letter-spacing: 0.02em;
 
-  @media screen and (min-width: $desktop) {
+  @media screen and (min-width: $tablet) {
     font-size: 18px;
     line-height: 1.67;
   }
