--- a/src/sass/layouts/_price.scss
+++ b/src/sass/layouts/_price.scss
@@ -13,17 +13,6 @@
 	}
 }
 
-// .background {
-//   position: absolute;
-//   z-index: 5;
-// @media screen and (min-width: $desktop) {
-//   background-image: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
-//   background-size: 585px 240px;
-//   top: 0;
-//   left: 0;
-//     }
-// }
-
 .price-content {
 	color: $secondary-grey-color;
 }
@@ -43,23 +32,38 @@
 }
 
 .price-title {
-	position: relative;
 	margin-bottom: 44px;
 }
 
 .price-list {
-	z-index: 2;
+  position: relative;
 	padding: 30px;
-	margin-bottom: 50px;
+  margin-bottom: 50px;
+  z-index: 1;
 
 	background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
 
 	@media screen and (min-width: $desktop) {
 		padding: 30px 40px;
 		height: 240px;
-
 		column-count: 2;
-		column-gap: 80px;
-		background-size: 50% auto;
-	}
+    column-gap: 80px;
+    
+    background-image: linear-gradient(180deg, #090B13 0%, rgba(9, 11, 19, 0.2) 100%);
+    background-size: 50% 100%;
+  }
+}
+
+.price-list::before {
+  	@media screen and (min-width: $desktop) {
+      content: "";
+      position: absolute;
+      top: 0;
+      left: 0;
+            z-index: -1;
+
+      background-image: linear-gradient(180deg, #171a24 0%, rgba(23, 26, 36, 0.2) 100%);
+      width: 50%;
+      height: 100%;
+    }
 }
