--- a/src/sass/components/_social.scss
+++ b/src/sass/components/_social.scss
@@ -5,17 +5,13 @@
   justify-content: center;
 }
 
-.social-link {
-  &:not(:last-child) {
-    margin-right: 10px;
-  }
-
-  &:hover .social-icon,
-  &:focus .social-icon {
-    fill: $accent-color;
-  }
+.social-link:not(:last-child) {
+  margin-right: 10px;
 }
-
+.social-link:hover .social-icon,
+.social-link:focus .social-icon {
+  fill: $accent-color;
+}
 .social-icon {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   width: 20px;
