--- a/src/partials/about-us.html
+++ b/src/partials/about-us.html
@@ -2,22 +2,42 @@
   <div class="container about">
     <div class="image-wrapper">
       <div class="about-gallery">
-        <img src="./images/about-us/about-us-desktop1@2x.jpg" alt="" class="about-img" width="270"
-          srcset="./images/about-us/about-us-desktop1@1x.jpg 1x, ./images/about-us/about-us-desktop1@2x.jpg 2x" />
+        <img
+          srcset="./images/about-us/about-us-desktop1@1x.jpg 1x, ./images/about-us/about-us-desktop1@2x.jpg 2x"
+          src="./images/about-us/about-us-desktop1@1x.jpg"
+          alt=""
+          class="img about"
+          width="270"
+        />
       </div>
       <div class="about-gallery">
-        <img src="./images/about-us/about-us-desktop2@2x.jpg" alt="" class="about-img" width="270px"
-          srcset="./images/about-us/about-us-desktop2@1x.jpg 1x, ./images/about-us/about-us-desktop2@2x.jpg 2x" />
+        <img
+          srcset="./images/about-us/about-us-desktop2@1x.jpg 1x, ./images/about-us/about-us-desktop2@2x.jpg 2x"
+          src="./images/about-us/about-us-desktop2@1x.jpg"
+          alt=""
+          class="img about"
+          width="270px"
+        />
       </div>
     </div>
     <div class="image-wrapper tablet">
       <div class="about-gallery">
-        <img src="./images/about-us/about-us-img1@2x.jpg" alt="" class="about-img" width="330px"
-          srcset="./images/about-us/about-us-img1@1x.jpg 1x, ./images/about-us/about-us-img1@2x.jpg 2x" />
+        <img
+          srcset="./images/about-us/about-us-img1@1x.jpg 1x, ./images/about-us/about-us-img1@2x.jpg 2x"
+          src="./images/about-us/about-us-img1@1x.jpg"
+          alt=""
+          class="img about"
+          width="330px"
+        />
       </div>
       <div class="about-gallery">
-        <img src="./images/about-us/about-us-img2@2x.jpg" alt="" class="about-img" width="330px"
-          srcset="./images/about-us/about-us-img2@1x.jpg 1x, ./images/about-us/about-us-img2@2x.jpg 2x" />
+        <img
+          srcset="./images/about-us/about-us-img2@1x.jpg 1x, ./images/about-us/about-us-img2@2x.jpg 2x"
+          src="./images/about-us/about-us-img2@1x.jpg"
+          alt=""
+          class="img about"
+          width="330px"
+        />
       </div>
     </div>
     <div class="about-block">
