--- a/src/sass/layouts/_about-us.scss
+++ b/src/sass/layouts/_about-us.scss
@@ -48,7 +48,9 @@
     width: 330px;
     height: 235px;
     flex-direction: column;
+  }
 
+  @media screen and (min-width: $tablet) and (max-width: 1279px) {
     &:not(:last-child) {
       margin-bottom: 30px;
     }
@@ -62,11 +64,12 @@
 
     &:not(:first-child) {
       margin-left: 30px;
+      margin-bottom: 0;
     }
   }
 }
 
-.about-img {
+.img.about {
   @media screen and (min-width: $tablet) {
     width: 330px;
     height: 235px;
