--- a/src/partials/masters.html
+++ b/src/partials/masters.html
@@ -7,8 +7,15 @@
     <ul class="cards">
       <li class="cards-item cards-item-size">
         <div class="wrap masters-wrap">
-          <img srcset="./images/our-master/our-masters-img1@1x.jpg 1x, ./images/our-master/our-masters-img1@2x.jpg 2x"
-            src="./images/our-master/our-masters-img1@1x.jpg" alt="Имя Мастера" class="img masters-img">
+          <picture>
+            <source srcset="./images/our-masters/our-masters-tel3@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-tel3@2x.jpg 2x" media="(max-width: 767px)" />
+            <source srcset="./images/our-masters/our-masters-tab3@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-tab3@2x.jpg 2x" media="(max-width:1279px)" />
+            <source srcset="./images/our-masters/our-masters-img3@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-img3@2x.jpg 2x" media="(min-width: 1280px)" />
+            <img src="./images/our-masters/our-masters-tel3@1x.jpg" alt="Фото мастера" class="img-wrapper img">
+          </picture>
         </div>
         <div class="master-information">
           <h4 class="master-name">John Smith</h4>
@@ -47,8 +54,14 @@
       </li>
       <li class="cards-item cards-item-size">
         <div class="wrap masters-wrap">
-          <img srcset="./images/our-master/our-masters-img2@1x.jpg 1x, ./images/our-master/our-masters-img2@2x.jpg 2x"
-            src="./images/our-master/our-masters-img2@1x.jpg" alt="Имя Мастера" class="img masters-img">
+          <picture>
+            <source srcset="./images/our-masters/our-masters-tel2@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-tel2@2x.jpg 2x" media="(max-width: 767px)" />
+            <source srcset="./images/our-masters/our-masters-tab2@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-tab2@2x.jpg 2x" media="(max-width:1279px)" />
+            <source srcset="./images/our-masters/our-masters-img2@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-img2@2x.jpg 2x" media="(min-width: 1280px)" />
+            <img src="./images/our-masters/our-masters-tel2@1x.jpg" alt="Фото мастера" class="img-wrapper img">
         </div>
         <div class="master-information">
           <h4 class="master-name">Michele Doe</h4>
@@ -87,8 +100,14 @@
       </li>
       <li class="cards-item cards-item-size">
         <div class="wrap masters-wrap">
-          <img srcset="./images/our-master/our-masters-img3@1x.jpg 1x, ./images/our-master/our-masters-img3@2x.jpg 2x"
-            src="./images/our-master/our-masters-img3@1x.jpg" alt="Имя Мастера" class="img masters-img">
+          <picture>
+            <source srcset="./images/our-masters/our-masters-tel3@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-tel3@2x.jpg 2x" media="(max-width: 767px)" />
+            <source srcset="./images/our-masters/our-masters-tab3@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-tab3@2x.jpg 2x" media="(max-width:1279px)" />
+            <source srcset="./images/our-masters/our-masters-img3@1x.jpg 1х, 
+                                ./images/our-masters/our-masters-img3@2x.jpg 2x" media="(min-width: 1280px)" />
+            <img src="./images/our-masters/our-masters-tel3@1x.jpg" alt="Фото мастера" class="img-wrapper img">
         </div>
         <div class="master-information">
           <h4 class="master-name">Alan Black</h4>
