--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -30,7 +30,7 @@
           <address class="address">
             <ul class="address-list">
               <li class="address-item">
-                <a href="#" class="address-link">
+                <a href="https://goo.gl/maps/E6VXYdxXRcgQzx9s5" class="address-link">
                   <svg class="address-icon">
                     <use href="./images/sprite.svg#icon-location"></use>
                   </svg>
