--- a/src/sass/components/_menu-mob.scss
+++ b/src/sass/components/_menu-mob.scss
@@ -1,14 +1,17 @@
 .menu {
-  display: flex;
+  // display: flex;
   justify-content: space-between;
   align-items: center;
   width: 100%;
 
-  @media screen and (min-width: $tablet) and (max-width:1279px) {
+  @media screen and (min-width: $tablet) {
+    display: flex;
+  }
+
+  @media screen and (min-width: $tablet) and (max-width: 1279px) {
     padding-top: 8px;
     align-items: baseline;
   }
-  
 }
 
 @media screen and (max-width: 767px) {
