--- a/src/partials/gallery.html
+++ b/src/partials/gallery.html
@@ -4,48 +4,48 @@
     <ul class="gallery-list">
       <li class="gallery-item">
         <picture>
-          <source srcset="./images/gallery/gallery-tel1@1x.jpg 1х, 
-                                ./images/gallery/gallery-tel1@2x.jpg 2x" media="(max-width: 767px)" />
-          <source srcset="./images/gallery/gallery-tab1@1x.jpg 1х, 
-                                ./images/gallery/gallery-tab1@2x.jpg 2x" media="(max-width:1279px)" />
-          <source srcset="./images/gallery/gallery-img1@1x.jpg 1х, 
-                                ./images/gallery/gallery-img1@2x.jpg 2x" media="(min-width: 1280px)" />
+          <source media="(max-width: 767px)" srcset="./images/gallery/gallery-tel1@1x.jpg 1х, 
+                                ./images/gallery/gallery-tel1@2x.jpg 2x" />
+          <source media="(max-width:1279px)" srcset="./images/gallery/gallery-tab1@1x.jpg 1х, 
+                                ./images/gallery/gallery-tab1@2x.jpg 2x" />
+          <source media="(min-width: 1280px)" srcset="./images/gallery/gallery-img1@1x.jpg 1х, 
+                                ./images/gallery/gallery-img1@2x.jpg 2x" />
           <img src="./images/gallery/gallery-tel1@1x.jpg" alt="Мастер стрижет машинкой под ножницы мужчину"
             class="img-wrapper img">
         </picture>
       </li>
       <li class="gallery-item">
         <picture>
-          <source srcset="./images/gallery/gallery-tel2@1x.jpg 1х, 
-                                ./images/gallery/gallery-tel2@2x.jpg 2x" media="(max-width: 767px)" />
-          <source srcset="./images/gallery/gallery-tab2@1x.jpg 1х, 
-                                ./images/gallery/gallery-tab2@2x.jpg 2x" media="(max-width:1279px)" />
-          <source srcset="./images/gallery/gallery-img2@1x.jpg 1х, 
-                                ./images/gallery/gallery-img2@2x.jpg 2x" media="(min-width: 1280px)" />
+          <source media="(max-width: 767px)" srcset="./images/gallery/gallery-tel2@1x.jpg 1х, 
+                                ./images/gallery/gallery-tel2@2x.jpg 2x" />
+          <source media="(max-width:1279px)" srcset="./images/gallery/gallery-tab2@1x.jpg 1х, 
+                                ./images/gallery/gallery-tab2@2x.jpg 2x" />
+          <source media="(min-width: 1280px)" srcset="./images/gallery/gallery-img2@1x.jpg 1х, 
+                                ./images/gallery/gallery-img2@2x.jpg 2x" />
           <img src="./images/gallery/gallery-tel2@1x.jpg" alt="Мастер наносит пену для брьтья на бороду клиента"
             class="img-wrapper img">
         </picture>
       </li>
       <li class="gallery-item">
         <picture>
-          <source srcset="./images/gallery/gallery-tel3@1x.jpg 1х, 
-                                ./images/gallery/gallery-tel3@2x.jpg 2x" media="(max-width: 767px)" />
-          <source srcset="./images/gallery/gallery-tab3@1x.jpg 1х, 
-                                ./images/gallery/gallery-tab3@2x.jpg 2x" media="(max-width:1279px)" />
-          <source srcset="./images/gallery/gallery-img3@1x.jpg 1х, 
-                                ./images/gallery/gallery-img3@2x.jpg 2x" media="(min-width: 1280px)" />
+          <source media="(max-width: 767px)" srcset="./images/gallery/gallery-tel3@1x.jpg 1х, 
+                                ./images/gallery/gallery-tel3@2x.jpg 2x" />
+          <source media="(max-width:1279px)" srcset="./images/gallery/gallery-tab3@1x.jpg 1х, 
+                                ./images/gallery/gallery-tab3@2x.jpg 2x" />
+          <source media="(min-width: 1280px)" srcset="./images/gallery/gallery-img3@1x.jpg 1х, 
+                                ./images/gallery/gallery-img3@2x.jpg 2x" />
           <img src="./images/gallery/gallery-tel3@1x.jpg" alt="Мастер промакивает полотенцем лицо клиента"
             class="img-wrapper img">
         </picture>
       </li>
       <li class="gallery-item">
         <picture>
-          <source srcset="./images/gallery/gallery-tel4@1x.jpg 1х, 
-                                ./images/gallery/gallery-tel4@2x.jpg 2x" media="(max-width: 767px)" />
-          <source srcset="./images/gallery/gallery-tab4@1x.jpg 1х, 
-                                ./images/gallery/gallery-tab4@2x.jpg 2x" media="(max-width:1279px)" />
-          <source srcset="./images/gallery/gallery-img4@1x.jpg 1х, 
-                                ./images/gallery/gallery-img4@2x.jpg 2x" media="(min-width: 1280px)" />
+          <source media="(max-width: 767px)" srcset="./images/gallery/gallery-tel4@1x.jpg 1х, 
+                                ./images/gallery/gallery-tel4@2x.jpg 2x" />
+          <source media="(max-width:1279px)" srcset="./images/gallery/gallery-tab4@1x.jpg 1х, 
+                                ./images/gallery/gallery-tab4@2x.jpg 2x" />
+          <source media="(min-width: 1280px)" srcset="./images/gallery/gallery-img4@1x.jpg 1х, 
+                                ./images/gallery/gallery-img4@2x.jpg 2x" />
           <img src="./images/gallery/gallery-tel4@1x.jpg" alt="Мастер работает над прической клиента"
             class="img-wrapper img">
         </picture>
