--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -122,12 +122,14 @@
 .form-field input {
   width: 100%;
   margin: 0;
-  padding: 0;
-  border: 1px solid rgba(33, 33, 33, 0.2);
-  border-radius: 4px;
-  padding-top: 10px;
-  padding-bottom: 10px;
-  padding-left: 42px;
+  // padding: 0;
+  // border: none;
+  // border-bottom: 1px solid rgba(33, 33, 33, 0.2);
+  // border-radius: 4px;
+  // padding-top: 10px;
+  // padding-bottom: 10px;
+  padding-left: 5px;
+  padding-right: 5px;
 }
 .checkbox-container {
   margin-bottom: 20px;
