--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -22,10 +22,10 @@
           <li class="nav-item"><a href="#contacts" class="nav-link">Контакты</a></li>
         </ul>
       </nav>
-      
+
       <div class="contacts">
         <form action="#name">
-          <button type="button" class="button" data-modal-open data-menu-button >онлайн-запись</button>
+          <button class="button">онлайн-запись</button>
         </form>
         <a href="tel:+380441111111" class="nav-contact">+38 044 111 11 11</a>
       </div>
