--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -1,9 +1,9 @@
 .modal {
   position: relative;
-  margin: auto;
+  // margin: auto;
 
   // max-width: 528px;
-  padding: 40px;
+  // padding: 40px;
 
   //   background: $background-color;
   box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
