--- a/src/sass/components/_modal.scss
+++ b/src/sass/components/_modal.scss
@@ -6,8 +6,8 @@
   // padding: 40px;
 
   //   background: $background-color;
-  box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
-  border-radius: 4px;
+  // box-shadow: 0px 2px 1px rgba(0, 0, 0, 0.2), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12);
+  // border-radius: 4px;
 
   font-size: 14px;
   line-height: 1.14;
